[gd_scene load_steps=19 format=3 uid="uid://dt4bh6x8fuy0x"]

[ext_resource type="Script" uid="uid://dvctt26h46iao" path="res://scripts/ui/pause_menu.gd" id="1_6tw0m"]
[ext_resource type="Texture2D" uid="uid://d2h6wdr5m2fue" path="res://assets/images/button_1.atlastex" id="2_0bnpd"]
[ext_resource type="Theme" uid="uid://dtiv81upl2jvn" path="res://assets/ui_theme.theme" id="3_4inpj"]
[ext_resource type="Texture2D" uid="uid://bolamf8i44a2e" path="res://assets/images/button_2.atlastex" id="4_8fwbo"]
[ext_resource type="Texture2D" uid="uid://bo4rtroutsnio" path="res://assets/images/button_3.atlastex" id="5_2rlsb"]

[sub_resource type="LabelSettings" id="LabelSettings_8wfqe"]
font_size = 90

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_coo1x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2jkta"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ht4ye"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7yca1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lrbnh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6qnem"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ynwdf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p4b6u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3fvc3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kk5q1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ukr1j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0q18a"]

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_6tw0m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuLabel" type="Label" parent="CanvasLayer"]
offset_left = 828.0
offset_top = 154.0
offset_right = 1123.0
offset_bottom = 284.0
theme = ExtResource("3_4inpj")
text = "PAUSE"
label_settings = SubResource("LabelSettings_8wfqe")

[node name="ResumeButton" type="Button" parent="CanvasLayer"]
offset_left = 774.0
offset_top = 301.0
offset_right = 1524.0
offset_bottom = 549.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_coo1x")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2jkta")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ht4ye")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7yca1")
icon = ExtResource("2_0bnpd")

[node name="Label" type="Label" parent="CanvasLayer/ResumeButton"]
layout_mode = 0
offset_left = 318.0
offset_top = 74.0
offset_right = 466.0
offset_bottom = 166.0
theme = ExtResource("3_4inpj")
text = "PLAY"

[node name="SettingsButton" type="Button" parent="CanvasLayer"]
offset_left = 776.0
offset_top = 466.0
offset_right = 1530.0
offset_bottom = 696.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_lrbnh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6qnem")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ynwdf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p4b6u")
icon = ExtResource("4_8fwbo")

[node name="Label" type="Label" parent="CanvasLayer/SettingsButton"]
layout_mode = 0
offset_left = 252.0
offset_top = 80.0
offset_right = 535.0
offset_bottom = 172.0
theme = ExtResource("3_4inpj")
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="CanvasLayer"]
offset_left = 786.0
offset_top = 635.0
offset_right = 1531.0
offset_bottom = 888.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_3fvc3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kk5q1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ukr1j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0q18a")
icon = ExtResource("5_2rlsb")

[node name="Label" type="Label" parent="CanvasLayer/ExitButton"]
layout_mode = 0
offset_left = 300.0
offset_top = 86.0
offset_right = 448.0
offset_bottom = 178.0
theme = ExtResource("3_4inpj")
text = "EXIT"

[connection signal="button_up" from="CanvasLayer/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="CanvasLayer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="CanvasLayer/ExitButton" to="." method="_on_exit_button_up"]
